Fixing some css issues